--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <title>my-web</title>
-  <link rel="stylesheet" href="/Resume/dist/main.css">
-</head>
-
-<body>
-  <div id="app"></div>
-  <script src="/Resume/dist/build.js"></script>
-</body>
-
+<html lang=en>
+  <head>
+    <meta charset=utf-8>
+    <meta http-equiv=X-UA-Compatible content="IE=edge">
+    <meta name=viewport content="width=device-width,initial-scale=1">
+    <link rel=icon href=/Resume/favicon.ico> <title>my-web</title>
+    <link href=/Resume/css/app.433be117.css rel=preload as=style>
+    <link href=/Resume/css/chunk-vendors.84e22b27.css rel=preload as=style>
+    <link href=/Resume/js/app.0fa2aef9.js rel=preload as=script>
+    <link href=/Resume/js/chunk-vendors.334786e3.js rel=preload as=script>
+    <link href=/Resume/css/chunk-vendors.84e22b27.css rel=stylesheet>
+    <link href=/Resume/css/app.433be117.css rel=stylesheet>
+  </head>
+  <body>
+    <noscript>
+      <strong>We're sorry but my-web doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
+    <div id=app></div>
+    <script src=/Resume/js/chunk-vendors.334786e3.js></script>
+    <script src=/Resume/js/app.0fa2aef9.js></script>
+  </body>
 </html>
