--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html lang=en>
-    <head>
-        <meta charset=utf-8>
-        <meta http-equiv=X-UA-Compatible content="IE=edge">
-        <meta name=viewport content="width=device-width,initial-scale=1">
-        <link rel=icon href=/Resume/favicon.ico><title>my-web</title>
-        <link href=/Resume/css/app.bc53773e.css rel=preload as=style>
-        <link href=/Resume/css/chunk-vendors.cbc2a074.css rel=preload as=style>
-        <link href=/Resume/js/app.ab287f2f.js rel=preload as=script>
-        <link href=/Resume/js/chunk-vendors.f5b4e659.js rel=preload as=script>
-        <link href=/Resume/css/chunk-vendors.cbc2a074.css rel=stylesheet>
-        <link href=/Resume/css/app.bc53773e.css rel=stylesheet>
+<html lang="en">
+    <head><meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <link rel="icon" href="/Resume/favicon.ico">
+        <title>my-web</title>
+        <link href="/Resume/css/app.bc53773e.css" rel="preload" as="style">
+        <link href="/Resume/css/chunk-vendors.dcd8433d.css" rel="preload" as="style">
+        <link href="/Resume/js/app.0cc0130e.js" rel="preload" as="script">
+        <link href="/Resume/js/chunk-vendors.236d4529.js" rel="preload" as="script">
+        <link href="/Resume/css/chunk-vendors.dcd8433d.css" rel="stylesheet">
+        <link href="/Resume/css/app.bc53773e.css" rel="stylesheet">
     </head>
     <body>
         <noscript>
             <strong>We're sorry but my-web doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
         </noscript>
-        <div id=app></div>
-        <script src=/Resume/js/chunk-vendors.f5b4e659.js></script>
-        <script src=/Resume/js/app.ab287f2f.js></script>
+        <div id="app"></div>
+        <script src="/Resume/js/chunk-vendors.236d4529.js"></script>
+        <script src="/Resume/js/app.0cc0130e.js"></script>
     </body>
 </html>
